--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
     .msg-title { font-size: 20px; font-weight: 600; margin: 0 0 16px 0; color: #fff; line-height: 1.4; }
     .msg-info { display: flex; justify-content: space-between; align-items: flex-start; font-size: 13px; }
     .sender-avatar {
-      width: 40px; height: 40px; border-radius: 6px; background: #1a2a52;
+      width: 40px; height: 40px; border-radius: 10px; background: #1a2a52;
       color: #8db0ff; display: flex; align-items: center; justify-content: center;
-      font-weight: bold; margin-right: 12px; border: 1px solid #2a3f75; font-size: 16px;
+      font-weight: bold; margin-right: 12px; font-size: 16px;
     }
 
     /* Toolbar inside Meta */
@@ -252,7 +252,6 @@
   <!-- Reading Pane -->
   <section class="reading-pane">
     <div id="emptyState" style="display: flex; align-items: center; justify-content: center; height: 100%; color: #2a3f75; flex-direction: column; text-align: center; padding: 20px;">
-      <div style="font-size: 48px; opacity: 0.5; margin-bottom: 16px;">📬</div>
       <div style="font-size: 16px; font-weight: 500;">No message selected</div>
       <div class="muted" style="font-size: 13px; margin-top: 8px;">Select an item from the list to read</div>
     </div>
