--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       background:#0f1626;
       border-right:1px solid #1b2640;
       display: flex; flex-direction: column; flex-shrink: 0;
-      transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: margin-left 0.3s cubic-bezier(0.4, 0, 0.2, 1), transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       z-index: 10;
     }
     /* Desktop Collapsed State */
@@ -941,3 +941,4 @@
 </script>
 
 </body>
+</html>
