--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
       <div class="brand-title">
         <b>Webmail</b>
-        <span class="muted">Secure Inbox • Neo-SaaS UI</span>
+        <span class="muted">Secure Inbox</span>
       </div>
 
       <!-- Keep original badge element for your JS logic; hidden visually -->
@@ -1437,3 +1437,4 @@
   </script>
 </body>
 </html>
+
